remove dark mode and fix contact page

--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -1,6 +1,6 @@
 ---
 title: 'Contact'
-description: 'Meta description for the page'
+description: 'Contact Macomb Landscaping Services for professional lawn care, landscaping, and property maintenance in Macomb County and surrounding areas. Call 586-842-7297 for a free estimate.'
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'contact/'
 ---
@@ -37,7 +37,7 @@ permalink: 'contact/'
                     <span class="cs-topper">Contact</span>
                     <h2 class="cs-title">Get in Touch</h2>
                     <p class="cs-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ridiculus elementum ullamcorper ipsum porttitor aliquam. Id magna urna ultrices odio pulvinar. Sed ut.
+                        Ready to transform your lawn? Contact us today for a free estimate on lawn care, landscaping, irrigation, or any of our professional services. We're here to help keep your property looking its best year-round!
                     </p>
                 </div>
                 <label>
@@ -85,8 +85,8 @@ permalink: 'contact/'
 
                 <!-- Background Image-->
                 <picture class="cs-bg-picture">
-                    <source media="(min-width: 601px)" srcset="/assets/images/skyscraper.jpg">
-                    <img aria-hidden="true" decoding="async" src="/assets/images/skyscraper.jpg" alt="building" loading="lazy" width="2500" height="1667">
+                    <source media="(min-width: 601px)" srcset="/assets/images/services/landscaping.jpg">
+                    <img aria-hidden="true" decoding="async" src="/assets/images/services/landscaping.jpg" alt="professional landscaping services" loading="lazy" width="2500" height="1667">
                 </picture>
 
             </div>
