fix some wording

--- a/src/index.html
+++ b/src/index.html
@@ -318,9 +318,8 @@ eleventyNavigation:
         <div class="cs-content">
             <div class="cs-flex">
                 <span class="cs-topper">Our Gallery</span>
-                <h2 class="cs-title">Witness The Difference and Our Results</h2>
+                <h2 class="cs-title">Let our work speak for itself</h2>
             </div>
-            <a class="cs-button-solid" href="">View All</a>
         </div>
         <!--Gallery-->
         <div class="cs-gallery">
