fix issue with sub pages not showing

--- a/src/content/pages/services/lawnscaping.html
+++ b/src/content/pages/services/lawnscaping.html
@@ -2,7 +2,7 @@
 title: 'Landscaping Services in Macomb MI'
 description: 'Professional landscaping services in Macomb, Shelby, and Chesterfield. We provide mulching, hardscapes, tree trimming, sod replacement, and more — with free estimates and guaranteed quality.'
 preloadImg: ''
-permalink: 'services/landscaping'
+permalink: 'services/landscaping/'
 ---
 
 {% extends "layouts/base.html" %}
