--- a/src/content/pages/services/snow-removal.html
+++ b/src/content/pages/services/snow-removal.html
@@ -2,7 +2,7 @@
 title: 'Snow Removal Services in Macomb MI'
 description: 'Reliable snow plowing and deicing for homes and businesses in Macomb, Shelby Township, and Chesterfield. Seasonal contracts or per-push rates with priority routes, pre-salting, and early sign-up discounts.'
 preloadImg: ''
-permalink: 'services/snow-removal'
+permalink: 'services/snow-removal/'
 ---
 
 {% extends "layouts/base.html" %}
