--- a/src/index.html
+++ b/src/index.html
@@ -120,7 +120,7 @@ eleventyNavigation:
                 <p class="cs-item-text">
                     Our professional lawn care services keep your property looking its best with weekly, biweekly, and commercial maintenance options. From precise mowing and edging to trimming and debris removal, we deliver clean, healthy, and well-maintained lawns across Macomb and surrounding areas.
                 </p>
-                <a href="services/lawncare"  class="cs-link">
+                <a href="/services/lawncare"  class="cs-link">
                     Read More
                     <img class="cs-arrow" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/red-arrow.svg" alt="icon" width="20" height="20" aria-hidden="true">
                 </a>
@@ -139,7 +139,7 @@ eleventyNavigation:
                 <p class="cs-item-text">
                     We provide complete landscaping services for homes and businesses, including mulching, tree trimming, rock installation, hardscapes, and sod replacement. Fully insured and backed by excellent customer reviews, we offer free estimates and guarantee all work is completed before payment.
                 </p>
-                <a href="" class="cs-link">
+                <a href="/services/landscaping" class="cs-link">
                     Read More
                     <img class="cs-arrow" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/red-arrow.svg" alt="icon" width="20" height="20" aria-hidden="true">
                 </a>
@@ -158,7 +158,7 @@ eleventyNavigation:
                 <p class="cs-item-text">
                    Unlike most companies, we handle all sprinkler system needs—from start-ups and shut-downs to backflow testing, control box repairs, and multi-zone maintenance. Our Michigan-based team ensures your system runs smoothly year-round, and we fully warranty any freeze damage if your shut-down was done by us.
                 </p>
-                <a href="" class="cs-link">
+                <a href="/services/irrigation" class="cs-link">
                     Read More
                     <img class="cs-arrow" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/red-arrow.svg" alt="icon" width="20" height="20" aria-hidden="true">
                 </a>
@@ -177,7 +177,7 @@ eleventyNavigation:
                 <p class="cs-item-text">
                     Protect your home with professional gutter cleaning done twice a year to prevent clogs and water damage. Regular maintenance extends the life of your roof and gutters while keeping your home’s exterior clean and well-maintained.
                 </p>
-                <a href="" class="cs-link">
+                <a href="/services/gutter-cleaning" class="cs-link">
                     Read More
                     <img class="cs-arrow" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/red-arrow.svg" alt="icon" width="20" height="20" aria-hidden="true">
                 </a>
@@ -196,7 +196,7 @@ eleventyNavigation:
                 <p class="cs-item-text">
                    Keep your property looking clean and professional with our seasonal weed control services. We offer monthly contracts to pull and spray weeds in mulch beds, pavement cracks, and other problem areas—so you can enjoy a neat, well-kept landscape all season long.
                 </p>
-                <a href="" class="cs-link">
+                <a href="/services/gutter-cleaning" class="cs-link">
                     Read More
                     <img class="cs-arrow" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/red-arrow.svg" alt="icon" width="20" height="20" aria-hidden="true">
                 </a>
@@ -215,7 +215,7 @@ eleventyNavigation:
                 <p class="cs-item-text">
                     We provide reliable snow removal for both residential and commercial clients with seasonal and per-push rate options. Our team clears lots and walkways before business hours, offering premium contracts with priority service and deicing, as well as budget-friendly plans—plus an early sign-up discount when you book before August.
                 </p>
-                <a href="" class="cs-link">
+                <a href="/services/snow-removal" class="cs-link">
                     Read More
                     <img class="cs-arrow" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/red-arrow.svg" alt="icon" width="20" height="20" aria-hidden="true">
                 </a>
