updated about us

--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -38,28 +38,190 @@ eleventyNavigation:
             <!-- Left Image Section -->
             <div class="cs-left">
                 <picture class="cs-picture cs-picture1">
-                    <source media="(max-width: 600px)" srcset="/assets/images/cabinets2-m.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/cabinets2.jpg">
-                    <img aria-hidden="true" decoding="async" src="/assets/images/cabinets2.jpg" alt="cabinets" loading="lazy" width="400" height="563">
+                    <source media="(max-width: 600px)" srcset="/assets/images/portfolio/frontLawn.jpeg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/portfolio/frontLawn.jpeg">
+                    <img aria-hidden="true" decoding="async" src="/assets/images/portfolio/frontLawn.jpeg" alt="professionally maintained lawn" loading="lazy" width="522" height="581">
                 </picture>
                 <picture class="cs-picture cs-picture2">
-                    <source media="(max-width: 600px)" srcset="/assets/images/construction-m.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/construction.jpg">
-                    <img aria-hidden="true" decoding="async" src="/assets/images/construction.jpg" alt="house" loading="lazy" width="400" height="563">
+                    <source media="(max-width: 600px)" srcset="/assets/images/portfolio/treeMulch.jpeg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/portfolio/treeMulch.jpeg">
+                    <img aria-hidden="true" decoding="async" src="/assets/images/portfolio/treeMulch.jpeg" alt="landscaping and mulching services" loading="lazy" width="414" height="400">
                 </picture>
             </div>
             <!-- Right Content Section-->
             <div class="cs-right">
                 <span class="cs-topper">About Us</span>
-                <h2 class="cs-title">About Macomb Landscaping Services</h2>
+                <h2 class="cs-title">Your Trusted All-in-One Landscaping Partner</h2>
                 <p class="cs-text">
-                    Macomb Landscaping Services began with a simple question — why isn’t there one company that does it all? From lawn care and landscaping to gutter cleaning and irrigation, we set out to be that all-in-one solution. Five years later, we’re proud to serve our community with reliable, high-quality service built on integrity and attention to detail.
+                    Macomb Landscaping Services began with a simple question — why isn't there one company that does it all? From lawn care and landscaping to gutter cleaning and irrigation, we set out to be that all-in-one solution. Five years later, we're proud to serve Macomb County and surrounding communities with reliable, high-quality service built on integrity and attention to detail.
                 </p>
                 <p class="cs-text">
-We take pride in clear communication, exceptional customer service, and fair, transparent pricing. Your home or business is one of your biggest investments, and our goal is to enhance its curb appeal—not just maintain it. Call or text us today for a free estimate and experience the difference of a company that truly cares. 
-                </p>             
-                <a href="/contact" class="cs-button-solid">Contact Us</a>
+                    We take pride in clear communication, exceptional customer service, and fair, transparent pricing. Your home or business is one of your biggest investments, and our goal is to enhance its curb appeal—not just maintain it. Every project we undertake reflects our commitment to quality workmanship and customer satisfaction.
+                </p>
+                <a href="/contact" class="cs-button-solid">Get Your Free Estimate</a>
             </div>
+        </div>
+    </section>
+
+    <!-- ============================================ -->
+    <!--                 Why Choose Us                -->
+    <!-- ============================================ -->
+
+    <section id="why-choose">
+        <div class="cs-container">
+            <div class="cs-content">
+                <span class="cs-topper">Why Choose Us</span>
+                <h2 class="cs-title">What Sets Us Apart From the Competition</h2>
+                <p class="cs-text">
+                    We're not just another landscaping company. We're your neighbors, dedicated to making Macomb County properties look their absolute best year-round.
+                </p>
+            </div>
+            <ul class="cs-card-group">
+                <li class="cs-item">
+                    <picture class="cs-picture">
+                        <source media="(max-width: 600px)" srcset="/assets/images/bor-images/image1.jpeg">
+                        <source media="(min-width: 601px)" srcset="/assets/images/bor-images/image1.jpeg">
+                        <img loading="lazy" decoding="async" src="/assets/images/bor-images/image1.jpeg" alt="comprehensive landscaping services" width="413" height="280">
+                    </picture>
+                    <div class="cs-item-content">
+                        <h3 class="cs-h3">Comprehensive Services</h3>
+                        <p class="cs-item-text">
+                            One company for all your needs—lawn care, landscaping, irrigation, gutter cleaning, snow removal, and more. No need to juggle multiple contractors.
+                        </p>
+                    </div>
+                </li>
+                <li class="cs-item">
+                    <picture class="cs-picture">
+                        <source media="(max-width: 600px)" srcset="/assets/images/bor-images/image2.jpeg">
+                        <source media="(min-width: 601px)" srcset="/assets/images/bor-images/image2.jpeg">
+                        <img loading="lazy" decoding="async" src="/assets/images/bor-images/image2.jpeg" alt="experienced landscaping team" width="413" height="280">
+                    </picture>
+                    <div class="cs-item-content">
+                        <h3 class="cs-h3">5+ Years of Experience</h3>
+                        <p class="cs-item-text">
+                            Our experienced team knows Michigan's climate and what it takes to keep properties beautiful through every season.
+                        </p>
+                    </div>
+                </li>
+                <li class="cs-item">
+                    <picture class="cs-picture">
+                        <source media="(max-width: 600px)" srcset="/assets/images/portfolio/treeAfter.jpeg">
+                        <source media="(min-width: 601px)" srcset="/assets/images/portfolio/treeAfter.jpeg">
+                        <img loading="lazy" decoding="async" src="/assets/images/portfolio/treeAfter.jpeg" alt="quality landscaping results" width="413" height="280">
+                    </picture>
+                    <div class="cs-item-content">
+                        <h3 class="cs-h3">Fully Insured & Guaranteed</h3>
+                        <p class="cs-item-text">
+                            We're fully insured and guarantee all our work. Payment is only required after the job is completed to your satisfaction.
+                        </p>
+                    </div>
+                </li>
+                <li class="cs-item">
+                    <picture class="cs-picture">
+                        <source media="(max-width: 600px)" srcset="/assets/images/bor-images/image3.jpeg">
+                        <source media="(min-width: 601px)" srcset="/assets/images/bor-images/image3.jpeg">
+                        <img loading="lazy" decoding="async" src="/assets/images/bor-images/image3.jpeg" alt="affordable landscaping services" width="413" height="280">
+                    </picture>
+                    <div class="cs-item-content">
+                        <h3 class="cs-h3">Transparent Pricing</h3>
+                        <p class="cs-item-text">
+                            Free estimates with honest, upfront pricing. No hidden fees or surprises—just fair rates for quality work.
+                        </p>
+                    </div>
+                </li>
+                <li class="cs-item">
+                    <picture class="cs-picture">
+                        <source media="(max-width: 600px)" srcset="/assets/images/bor-images/image4.jpeg">
+                        <source media="(min-width: 601px)" srcset="/assets/images/bor-images/image4.jpeg">
+                        <img loading="lazy" decoding="async" src="/assets/images/bor-images/image4.jpeg" alt="customer satisfaction guaranteed" width="413" height="280">
+                    </picture>
+                    <div class="cs-item-content">
+                        <h3 class="cs-h3">Excellent Customer Reviews</h3>
+                        <p class="cs-item-text">
+                            Our reputation speaks for itself. Read our five-star reviews from satisfied residential and commercial clients throughout Macomb County.
+                        </p>
+                    </div>
+                </li>
+                <li class="cs-item">
+                    <picture class="cs-picture">
+                        <source media="(max-width: 600px)" srcset="/assets/images/bor-images/image5.jpeg">
+                        <source media="(min-width: 601px)" srcset="/assets/images/bor-images/image5.jpeg">
+                        <img loading="lazy" decoding="async" src="/assets/images/bor-images/image5.jpeg" alt="professional lawn care service" width="413" height="280">
+                    </picture>
+                    <div class="cs-item-content">
+                        <h3 class="cs-h3">Clear Communication</h3>
+                        <p class="cs-item-text">
+                            We keep you informed every step of the way. Quick responses, reliable scheduling, and updates when you need them.
+                        </p>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- ============================================ -->
+    <!--                 Our Story                    -->
+    <!-- ============================================ -->
+
+    <section id="our-story">
+        <div class="cs-container">
+            <div class="cs-image-group">
+                <picture class="cs-picture">
+                    <source media="(max-width: 600px)" srcset="/assets/images/portfolio/lawn2.jpeg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/portfolio/lawn2.jpeg">
+                    <img loading="lazy" decoding="async" src="/assets/images/portfolio/lawn2.jpeg" alt="professional lawn care services" width="542" height="400">
+                </picture>
+                <picture class="cs-picture">
+                    <source media="(max-width: 600px)" srcset="/assets/images/portfolio/backyard.jpeg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/portfolio/backyard.jpeg">
+                    <img loading="lazy" decoding="async" src="/assets/images/portfolio/backyard.jpeg" alt="backyard landscaping" width="542" height="400">
+                </picture>
+            </div>
+            <div class="cs-content">
+                <span class="cs-topper">Our Story</span>
+                <h2 class="cs-title">Building a Better Landscaping Experience</h2>
+                <p class="cs-text">
+                    When we started Macomb Landscaping Services, we saw a gap in the market. Property owners were frustrated with having to hire multiple companies for different services—one for mowing, another for snow removal, yet another for irrigation repairs. It was time-consuming, expensive, and often inconsistent.
+                </p>
+                <p class="cs-text">
+                    We decided to do things differently. By offering comprehensive property maintenance under one roof, we make life easier for our clients while maintaining the highest standards of quality across every service we provide.
+                </p>
+                <p class="cs-text">
+                    Today, we're proud to serve hundreds of residential and commercial clients throughout Macomb County, Shelby Township, Chesterfield, Sterling Heights, Clinton Township, and surrounding areas. Our team is dedicated to enhancing your property's beauty and value, season after season.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <!-- ============================================ -->
+    <!--              Services Overview               -->
+    <!-- ============================================ -->
+
+    <section id="services-overview">
+        <div class="cs-container">
+            <div class="cs-content">
+                <span class="cs-topper">What We Do</span>
+                <h2 class="cs-title">Complete Property Care, Year-Round</h2>
+            </div>
+            <ul class="cs-services-list">
+                <li class="cs-service-item">
+                    <h3 class="cs-service-title">Spring & Summer Services</h3>
+                    <p class="cs-service-text">Lawn mowing, edging, trimming, mulching, tree care, irrigation startup and maintenance, weed control, and landscaping projects</p>
+                </li>
+                <li class="cs-service-item">
+                    <h3 class="cs-service-title">Fall Services</h3>
+                    <p class="cs-service-text">Leaf cleanup, gutter cleaning, irrigation winterization, fall planting, and property preparation for winter</p>
+                </li>
+                <li class="cs-service-item">
+                    <h3 class="cs-service-title">Winter Services</h3>
+                    <p class="cs-service-text">Snow removal, salting and deicing, commercial lot plowing, residential driveway clearing, and 24/7 emergency service</p>
+                </li>
+                <li class="cs-service-item">
+                    <h3 class="cs-service-title">Year-Round Services</h3>
+                    <p class="cs-service-text">Property maintenance contracts, hardscaping, landscape design, irrigation repairs, and emergency services</p>
+                </li>
+            </ul>
+            <a href="/contact" class="cs-button-solid">Request a Free Consultation</a>
         </div>
     </section>
 
