--- a/src/index.html
+++ b/src/index.html
@@ -224,6 +224,25 @@ eleventyNavigation:
     </div>
 </section>
 
+<!-- ============================================ -->
+<!--                   About Us                   -->
+<!-- ============================================ -->
+
+<section id="about-us-home">
+    <div class="cs-container">
+        <div class="cs-content">
+            <span class="cs-topper">About Us</span>
+            <h2 class="cs-title">Your All-in-One Landscaping Solution</h2>
+            <p class="cs-text">
+                Macomb Landscaping Services began with a simple question — why isn't there one company that does it all? From lawn care and landscaping to gutter cleaning and irrigation, we set out to be that all-in-one solution. Five years later, we're proud to serve our community with reliable, high-quality service built on integrity and attention to detail.
+            </p>
+            <p class="cs-text">
+                We take pride in clear communication, exceptional customer service, and fair, transparent pricing. Your home or business is one of your biggest investments, and our goal is to enhance its curb appeal—not just maintain it.
+            </p>
+            <a href="/about" class="cs-button-solid">Learn More About Us</a>
+        </div>
+    </div>
+</section>
 
 <!-- ============================================ -->
 <!--                Areas We Serve                -->
