change some wording in index

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@ eleventyNavigation:
         <div class="cs-content">
             <h1 class="cs-title">Macomb Landscaping Services</h1>
             <p class="cs-text">
-               From summer lawn care to winter snow removal, we proudly serve Macomb County, Shelby Township, Chesterfield, and nearby communities, with dependable residential and commercial property maintenance.
+               From summer lawn care to winter snow removal, we proudly serve Macomb County, Shelby Township, Warren, and surrounding communities, with dependable residential and commercial property maintenance.
              </p>
             <a href="" class="cs-button-solid">Call Us Now</a>
             
@@ -53,7 +53,7 @@ eleventyNavigation:
             <div class="cs-flex">
                 <h3 class="cs-h3">Lets get started!</h3>
                 <p class="cs-form-text">
-                    Request a free* No-Obligation quote & expert advice from our expert team!
+                    Request a free* No-Obligation quote & professional advice from our expert team!
                 </p>
             </div>
             <!--Form-->
@@ -100,7 +100,7 @@ eleventyNavigation:
     <div class="cs-container">
         <div class="cs-content">
             <span class="cs-topper">Services</span>
-            <h2 class="cs-title">Expert lawn care in Macomb and nearby communities</h2>
+            <h2 class="cs-title">Professional lawn care in Macomb and nearby communities</h2>
             <p class="cs-text">
                 Providing expert lawn mowing, edging, and seasonal maintenance throughout Macomb, Shelby, and Chesterfield—dependable care you can count on year-round.
             </p>
@@ -137,7 +137,7 @@ eleventyNavigation:
                     Landscaping
                 </h3>
                 <p class="cs-item-text">
-                    We provide complete landscaping services for homes and businesses, including mulching, tree trimming, rock installation, hardscapes, and sod replacement. Fully insured and backed by excellent customer reviews, we offer free estimates and guarantee all work is completed before payment.
+                    We provide complete landscaping services for homes and businesses, including mulching, tree trimming, rock installation, hardscapes, and sod replacement. Fully insured and backed by excellent customer reviews, we offer free estimates and guarantee all work is completed before final payment.
                 </p>
                 <a href="/services/landscaping" class="cs-link">
                     Read More
