fix some images

--- a/src/index.html
+++ b/src/index.html
@@ -384,9 +384,9 @@ eleventyNavigation:
                 <p class="cs-item-text">Mulching and tree landscaping services</p>
                 <div class="cs-picture-group">
                     <picture class="cs-picture">
-                        <source media="(max-width: 600px)" srcset="/assets/images/portfolio/treeMulch.jpeg">
-                        <source media="(min-width: 601px)" srcset="/assets/images/portfolio/treeMulch.jpeg">
-                        <img loading="lazy" decoding="async" src="/assets/images/portfolio/treeMulch.jpeg" alt="tree mulching and landscaping">
+                        <source media="(max-width: 600px)" srcset="/assets/images/portfolio/treeMulch.webp">
+                        <source media="(min-width: 601px)" srcset="/assets/images/portfolio/treeMulch.webp">
+                        <img loading="lazy" decoding="async" src="/assets/images/portfolio/treeMulch.webp" alt="tree mulching and landscaping">
                     </picture>
                     <span class="cs-tag">Mulching</span>
                 </div>
@@ -411,9 +411,9 @@ eleventyNavigation:
                 </div>
                 <div class="cs-picture-group">
                     <picture class="cs-picture">
-                        <source media="(max-width: 600px)" srcset="/assets/images/portfolio/sidelawn.jpeg">
-                        <source media="(min-width: 601px)" srcset="/assets/images/portfolio/sidelawn.jpeg">
-                        <img loading="lazy" decoding="async" src="/assets/images/portfolio/sidelawn.jpeg" alt="side yard lawn maintenance">
+                        <source media="(max-width: 600px)" srcset="/assets/images/portfolio/sidelawn.webp">
+                        <source media="(min-width: 601px)" srcset="/assets/images/portfolio/sidelawn.webp">
+                        <img loading="lazy" decoding="async" src="/assets/images/portfolio/sidelawn.webp" alt="side yard lawn maintenance">
                     </picture>
                     <span class="cs-tag">Side Yard</span>
                 </div>
