--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -43,9 +43,9 @@ eleventyNavigation:
                     <img aria-hidden="true" decoding="async" src="/assets/images/portfolio/frontLawn.jpeg" alt="professionally maintained lawn" loading="lazy" width="522" height="581">
                 </picture>
                 <picture class="cs-picture cs-picture2">
-                    <source media="(max-width: 600px)" srcset="/assets/images/portfolio/treeMulch.jpeg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/portfolio/treeMulch.jpeg">
-                    <img aria-hidden="true" decoding="async" src="/assets/images/portfolio/treeMulch.jpeg" alt="landscaping and mulching services" loading="lazy" width="414" height="400">
+                    <source media="(max-width: 600px)" srcset="/assets/images/portfolio/treeMulch.webp">
+                    <source media="(min-width: 601px)" srcset="/assets/images/portfolio/treeMulch.webp">
+                    <img aria-hidden="true" decoding="async" src="/assets/images/portfolio/treeMulch.webp" alt="landscaping and mulching services" loading="lazy" width="414" height="400">
                 </picture>
             </div>
             <!-- Right Content Section-->
